// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`quist syntax parse "(subject:in MATH, CPSC, S&DS AND 300<=number<500 AND NOT professors:has-any-of "Alan Weide", "Ozan Erat") OR is:fysem" 1`] = `
{
  "operands": [
    {
      "operands": [
        {
          "operator": "in",
          "target": "subject",
          "type": "CategoricalOp",
          "value": [
            "MATH",
            "CPSC",
            "S&DS",
          ],
        },
        {
          "operators": [
            "<=",
            "<",
          ],
          "target": "number",
          "type": "CompoundNumericOp",
          "values": [
            300,
            500,
          ],
        },
        {
          "operand": {
            "operator": "has-any-of",
            "target": "professors",
            "type": "SetOp",
            "value": [
              "Alan Weide",
              "Ozan Erat",
            ],
          },
          "type": "NotExpr",
        },
      ],
      "operator": "AND",
      "type": "ComplexExpr",
    },
    {
      "operator": "is",
      "target": "fysem",
      "type": "BooleanOp",
    },
  ],
  "operator": "OR",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "Hello world" 1`] = `
{
  "operands": [
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "Hello",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "world",
    },
  ],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "subject:has MATH" 1`] = `
{
  "operands": [
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "subject:has",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "MATH",
    },
  ],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "subject:has "foo bar", "bar baz"" 1`] = `
{
  "operands": [
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "subject:has",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "foo bar",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": ",",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "bar baz",
    },
  ],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "fysem:is x" 1`] = `
{
  "operands": [
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "fysem:is",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "x",
    },
  ],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse ""quote" 1`] = `
{
  "operands": [
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": ""quote",
    },
  ],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "CPSC 223" 1`] = `
{
  "operands": [
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "CPSC",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "223",
    },
  ],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "WLH" 1`] = `
{
  "operands": [
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "WLH",
    },
  ],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "" 1`] = `
{
  "operands": [],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "()" 1`] = `
{
  "operands": [
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "(",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": ")",
    },
  ],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse " " 1`] = `
{
  "operands": [],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "(" 1`] = `
{
  "operands": [
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "(",
    },
  ],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "(xxx" 1`] = `
{
  "operands": [
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "(",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "xxx",
    },
  ],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "xxx)" 1`] = `
{
  "operands": [
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "xxx",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": ")",
    },
  ],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "(xxx)" 1`] = `
{
  "operands": [
    {
      "operands": [
        {
          "operator": "contains",
          "target": "*",
          "type": "TextOp",
          "value": "xxx",
        },
      ],
      "operator": "AND",
      "type": "ComplexExpr",
    },
  ],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "xxx AND ) AND yyy" 1`] = `
{
  "operands": [
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "xxx",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": ")",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "yyy",
    },
  ],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "xxx AND ( AND yyy" 1`] = `
{
  "operands": [
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "xxx",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "(",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "yyy",
    },
  ],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "xxx AND (yyy" 1`] = `
{
  "operands": [
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "xxx",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "(",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "yyy",
    },
  ],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "xxx AND (yyy)" 1`] = `
{
  "operands": [
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "xxx",
    },
    {
      "operands": [
        {
          "operator": "contains",
          "target": "*",
          "type": "TextOp",
          "value": "yyy",
        },
      ],
      "operator": "AND",
      "type": "ComplexExpr",
    },
  ],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "xxx (AND) yyy" 1`] = `
{
  "operands": [
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "xxx",
    },
    {
      "operands": [
        {
          "operator": "contains",
          "target": "*",
          "type": "TextOp",
          "value": "AND",
        },
      ],
      "operator": "AND",
      "type": "ComplexExpr",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "yyy",
    },
  ],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "xxx AND yyy zzz" 1`] = `
{
  "operands": [
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "xxx",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "yyy",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "zzz",
    },
  ],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "xxx OR yyy AND zzz" 1`] = `
{
  "operands": [
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "xxx",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "yyy",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "AND",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "zzz",
    },
  ],
  "operator": "OR",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "xxx OR yyy zzz" 1`] = `
{
  "operands": [
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "xxx",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "yyy",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "zzz",
    },
  ],
  "operator": "OR",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "xxx yyy AND zzz" 1`] = `
{
  "operands": [
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "xxx",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "yyy",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "AND",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "zzz",
    },
  ],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "a "AND" b" 1`] = `
{
  "operands": [
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "a",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "AND",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "b",
    },
  ],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse ""subject:in" A" 1`] = `
{
  "operands": [
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "subject:in",
    },
    {
      "operator": "contains",
      "target": "*",
      "type": "TextOp",
      "value": "A",
    },
  ],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;

exports[`quist syntax parse "subject:in "A" 1`] = `
{
  "operands": [
    {
      "operator": "in",
      "target": "subject",
      "type": "CategoricalOp",
      "value": [
        ""A",
      ],
    },
  ],
  "operator": "AND",
  "type": "ComplexExpr",
}
`;
